--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -2,3 +2,8 @@ input:focus ~ .input-text,
 input:not(:placeholder-shown) ~ .input-text {
   @apply text-[#2E0052] transform -translate-y-6 -translate-x-2 scale-75;
 }
+
+textarea:focus ~ .textarea-text,
+textarea:not(:placeholder-shown) ~ .textarea-text {
+  @apply text-[#2E0052] transform -translate-y-6 -translate-x-2 scale-75;
+}
